--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "i18next": "^22.0.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.0.2",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
     "react-router-dom": "^6.4.3",
