--- a/package.json
+++ b/package.json
@@ -1,46 +1,58 @@
 {
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "bootstrap": "^5.2.3",
-    "classnames": "^2.3.2",
-    "i18next": "^22.0.6",
-    "i18next-browser-languagedetector": "^7.0.1",
-    "i18next-http-backend": "^2.0.2",
-    "node-sass": "^7.0.3",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^12.0.0",
-    "react-icons": "^4.7.1",
-    "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^14.4.3",
+		"bootstrap": "^5.2.3",
+		"classnames": "^2.3.2",
+		"i18next": "^22.0.6",
+		"i18next-browser-languagedetector": "^7.0.1",
+		"i18next-http-backend": "^2.0.2",
+		"node-sass": "^7.0.3",
+		"react": "^18.2.0",
+		"react-bootstrap": "^2.6.0",
+		"react-dom": "^18.2.0",
+		"react-i18next": "^12.0.0",
+		"react-icons": "^4.7.1",
+		"react-router-dom": "^6.4.3",
+		"react-scripts": "5.0.1",
+		"web-vitals": "^3.0.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"format": "prettier --write .",
+		"eslint": "eslint --fix . --ext .js,.jsx"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-config-standard": "^17.0.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-n": "^15.5.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.31.11",
+		"prettier": "^2.8.0"
+	}
 }
