--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.6.0",
 		"react-dom": "^18.2.0",
+		"react-error-boundary": "^4.0.4",
 		"react-geocode": "^0.2.3",
 		"react-google-places-autocomplete": "^2.3.2",
 		"react-i18next": "^12.0.0",
