--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-icons": "^4.7.1",
 		"react-router-dom": "^6.4.3",
 		"react-scripts": "5.0.1",
+		"usehooks-ts": "^2.9.1",
 		"web-vitals": "^3.0.4"
 	},
 	"scripts": {
